--- a/src/patterns/02-molecules/navigation/Sidebar/Sidebar.css
+++ b/src/patterns/02-molecules/navigation/Sidebar/Sidebar.css
@@ -1,7 +1,53 @@
 @import '../../../../index.css';
 
 
+/* Bypassing Tailwind here because TW uses rem sizing 
+   and the pseudo :before and :after elements (which
+   add the rounded corners above and below the current
+   menu item) all rely on exact px sizes b/c they must be
+   pixel perfect. If the user's root font size varies from
+   the standard 16px, the rem-based elements would alter
+   but the px-base elements would not, and this could lead
+   to many tears and much gnashing of teeth. */
 
+#page-nav { 
+  width: 228px;
+}
+
+.nav-item--active {
+  position: relative;
+  width: 220px;
+  height: 56px;
+  right: -4px;
+  background: rgb(247,251,249);
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+}
+
+.nav-item--active:before, .nav-item--active:after {
+  content: "";
+  position: absolute;
+  height: 14px;
+  width: 14px;
+  bottom: 0;
+  right: 4px;
+  /* background: rgb(18,65,104); */
+  background: rgb(18,65,104);
+}
+
+.nav-item--active:before {
+  top: -14px;
+  border-radius: 0 0 16px 0;
+  box-shadow: 16px 16px 0 14px rgb(247,251,249);
+}
+
+.nav-item--active:after {
+  bottom: -14px;
+  border-radius: 0 14px 0 0 ;
+  box-shadow: 16px -16px 0 14px rgb(247,251,249);
+}
+
+/* 
 @media only screen and (max-width: 1024px) {
   #sidebarMenu {
     transition: all 0.3s;
@@ -33,8 +79,8 @@
   input[type='checkbox']:checked ~ ul > li .listItemText {
     display: block;
   }
-}
-
+} */
+/* 
 .selectedListItem {
   background-color: white-dark;
   width: 224px;
@@ -48,10 +94,9 @@
   bottom: 0;
   background-color: orange;
   /* background-color: rgb(18,65,104); */
-}
+/* }
 .selectedListItem:after {
   bottom: 0px;
   right: -20px;
   /* border-radius: 0 0 10px 0;
   box-shadow: 10px 0 0 0 rgb(229,229,229); */
-}
